fix(table): support dark mode properly
We also had to visualize the selected row in a
different way, now with a sticky dot on the left side
of the selected row, which gets the theme's accent color.

--- a/src/components/table/partial-styles/_row-selection.scss
+++ b/src/components/table/partial-styles/_row-selection.scss
@@ -53,8 +53,7 @@
         );
     }
 
-    .tabulator-row.active &,
-    .tabulator-row.active:hover & {
+    .tabulator-row.active & {
         background-image: linear-gradient(
             to right,
             rgb(var(--table-row-background-color--active)) 70%,
